File selection screen headers now highlighted yellow. Font changed to Merriweather for better legibility. Increased default line height by 0.1pt. Improved use of Flexbox, more work needed. Rejection blank text lookup. Avoid word lookup while scrolling. Column and vocab grey instructions better formatted.

--- a/css/jquery.selectBox.css
+++ b/css/jquery.selectBox.css
@@ -163,6 +163,11 @@
     white-space: nowrap;
 }
 
+/*crw: highlight synthetic selectbox header: */
+ul.selectBox-options > li.selectBox-optgroup:first-child {
+    background-color: yellow;
+}
+
 /* Disabled state */
 .selectBox.selectBox-disabled {
     color: #888 !important;
